--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ListaDeCompras">
         <activity
+            android:name=".ui.view.Onboarding"
+            android:exported="true">
+
+        </activity>
+
+        <activity
             android:name=".ui.view.InnerListActivity"
             android:exported="false" />
+
         <activity
             android:name=".ui.view.MainActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+
     </application>
 
 </manifest>
