--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,8 @@ dependencies {
     //GSON
     implementation 'com.google.code.gson:gson:2.9.0'
 
+    //LOTTIE
+    def lottieVersion = "3.4.0"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
+
 }
