--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,26 +11,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ListaDeCompras">
         <activity
-            android:name=".ui.view.Onboarding"
+            android:name=".ui.activity.MainActivity"
             android:exported="true">
+        </activity>
 
+        <activity
+            android:name=".ui.activity.Onboarding"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
         <activity
-            android:name=".ui.view.InnerListActivity"
+            android:name=".ui.activity.InnerListActivity"
             android:exported="false" />
-
         <activity
-            android:name=".ui.view.MainActivity"
-            android:exported="true">
-        </activity>
-
+            android:name=".ui.activity.MainActivity"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
